--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,2 +1,15 @@
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+<script>
+    document.getElementById("upload_widget_opener").addEventListener("click", function() {
+
+        cloudinary.openUploadWidget({ cloud_name: 'hoffman-house', upload_preset: 'kov2px0a'},
+                function(error, result) {
+                    console.log(error, result)
+                    // Push URL into text input
+                    document.getElementById('url_text').value = result[0].url;
+                });
+
+    }, false);
+</script>
