--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -5,6 +5,9 @@
 <body class="contatiner">
 <header>
     <% include ../partials/header%>
+    <h3 class="ui center aligned icon header">
+        Edit: <%= post.title %>
+    </h3>
 </header>
 <main>
     <div class="ui grid container">
@@ -23,6 +26,18 @@
                     <div class="field">
                         <label>Image</label>
                         <input name="image" type="text" placeholder="="Image URL id="url_text"/>
+                    </div>
+                    <div class="field">
+                        <label>Tags</label>
+                        <div class="ui fluid multiple search selection dropdown" id="tag">
+                            <input name="tags" type="hidden">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">Tags</div>
+                            <div class="menu">
+                                <div class="item" data-value="Chirstmas">Christmas</div>
+                                <div class="item" data-value="Spring">Spring</div>
+                            </div>
+                        </div>
                     </div>
                     <button class="ui button" type="button" id="upload_widget_opener">
                         Upload with Widget
