--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
-    <%- include ../partials/head %>
+    <%- include ('../partials/head') %>
 </head>
 <body class="contatiner">
 <header>
-    <%- include .partials/header %>
+    <%- include ('../partials/header') %>
     <h3 class="ui center aligned icon header">
         New Post
     </h3>
@@ -14,7 +14,7 @@
         <div class="ui two column centered grid">
             <div class="column">
                 <!-- Enctype is multipart to support file upload-->
-                <form action="/create" method="post" enctype="multipart/form-data" class="ui form"></form>
+                <form action="/create" method="post" enctype="multipart/form-data" class="ui form">
                     <div class="field">
                         <label>Title</label>
                         <input name="title" type="text" placeholder="Title"/>
@@ -43,10 +43,11 @@
                         Upload with Widget
                     </button>
                     <button class="ui primary button" type="submit">Post</button>
+                </form>
             </div>
         </div>
     </div>
 </main>
-<%- include .partials/scripts %>
+<%- include ('../partials/scripts') %>
 </body>
 </html>
